Fixed scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body{
     font-family: Titillium Web;
+    overflow-x: hidden; 
 }
 
 /*****************NAVBAR****************/
